--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,81 @@
 			<artifactId>el-ri</artifactId>
 			<version>1.0</version>
 		</dependency>
+	  <dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-core</artifactId>
+		  <version>4.2.6.RELEASE</version>
+		  <exclusions>
+			  <exclusion>
+				  <artifactId>commons-logging</artifactId>
+				  <groupId>commons-logging</groupId>
+			  </exclusion>
+		  </exclusions>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-web</artifactId>
+		  <version>4.2.6.RELEASE</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-aop</artifactId>
+		  <version>4.2.6.RELEASE</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-context-support</artifactId>
+		  <version>4.2.6.RELEASE</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.springframework</groupId>
+		  <artifactId>spring-context</artifactId>
+		  <version>4.2.6.RELEASE</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>javax.inject</groupId>
+		  <artifactId>javax.inject</artifactId>
+		  <version>1</version>
+	  </dependency>
+
+	  <!-- Google Guava -->
+	  <dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>javax.servlet-api</artifactId>
+		  <scope>provided</scope>
+		  <version>3.0.1</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>commons-fileupload</groupId>
+		  <artifactId>commons-fileupload</artifactId>
+		  <version>1.3</version>
+		  <!-- makesure correct version here -->
+	  </dependency>
+	  <dependency>
+		  <groupId>commons-io</groupId>
+		  <artifactId>commons-io</artifactId>
+		  <version>2.4</version>
+	  </dependency>
+
+	  <!-- StringUtils -->
+	  <dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-lang3</artifactId>
+		  <version>3.3.2</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.reflections</groupId>
+		  <artifactId>reflections</artifactId>
+		  <version>0.9.8</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>commons-logging</groupId>
+		  <artifactId>commons-logging</artifactId>
+		  <version>1.1.1</version>
+	  </dependency>
+
   </dependencies>
   <build>
     <finalName>simple-webapp</finalName>
