--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,12 +18,22 @@
 		<welcome-file>hello.xhtml</welcome-file>
 	</welcome-file-list>
 
+	<listener>
+		<listener-class>
+			org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
+
 	<!-- JSF mapping -->
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:springBeans/helloBean.xml</param-value>
+	</context-param>
 
 	<!-- Map these files with JSF -->
 	<servlet-mapping>
